<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hinh_nen_dien_thoai_nhung_vien_soi"
    tools:context=".taomapin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="13dp"
        android:text="Tạo Mã Pin"
        android:textColor="#1AF6EF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="336dp"
        android:layout_height="417dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="86dp"
        app:cardBackgroundColor="?android:attr/textColorTertiary"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edthoten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:layout_marginEnd="77dp"
                    android:ems="10"
                    android:hint="@string/hoten"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="22sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/edtsodienthoai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="76dp"
                    android:layout_marginEnd="76dp"
                    android:ems="10"
                    android:hint="@string/sodienthoai"
                    android:inputType="phone"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="22sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtmapin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="73dp"
                    android:layout_marginLeft="73dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="79dp"
                    android:layout_marginRight="79dp"
                    android:ems="10"
                    android:hint="@string/nhapmapin"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="22sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="13dp" />

                <EditText
                    android:id="@+id/edtnhaplaimapin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="73dp"
                    android:layout_marginEnd="79dp"
                    android:ems="10"
                    android:hint="@string/nhaplaimapin"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="22sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="38dp" />

                <Button
                    android:id="@+id/btdongy"
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="151dp"
                    android:layout_marginEnd="172dp"
                    android:background="#95DD56"
                    android:text="@string/dong_y"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>